--- a/deployment/network-operator/Chart.yaml
+++ b/deployment/network-operator/Chart.yaml
@@ -1,22 +1,23 @@
 apiVersion: v2
 name: network-operator
-version: 0.1.1
+version: 23.7.0
 kubeVersion: '>= 1.21.0'
-appVersion: v0.1.1
+appVersion: v23.7.0
 description: Nvidia network operator
 type: application
 keywords:
-- gpu-direct
-- rdma
+  - gpu-direct
+  - rdma
 home: https://mellanox.github.io/network-operator
 sources:
-- https://github.com/Mellanox/network-operator
+  - https://github.com/Mellanox/network-operator
 dependencies:
 - condition: nfd.enabled
   name: node-feature-discovery
-  repository: http://kubernetes-sigs.github.io/node-feature-discovery/charts
+  repository: "http://kubernetes-sigs.github.io/node-feature-discovery/charts"
   version: 0.13.2
 - condition: sriovNetworkOperator.enabled
   name: sriov-network-operator
-  repository: ''
+  repository: ""
   version: 0.1.0
+
