--- a/deployment/network-operator/values.yaml
+++ b/deployment/network-operator/values.yaml
@@ -99,8 +99,8 @@ sriov-network-operator:
 
   # Image URIs for sriov-network-operator components
   images:
-    operator: nvcr.io/nvidia/mellanox/sriov-network-operator:network-operator-23.7.0
-    sriovConfigDaemon: nvcr.io/nvidia/mellanox/sriov-network-operator-config-daemon:network-operator-23.7.0
+    operator: harbor.mellanox.com/cloud-orchestration/sriov-network-operator:network-operator-1.5.0-beta1
+    sriovConfigDaemon: harbor.mellanox.com/cloud-orchestration/sriov-network-operator-config-daemon:network-operator-1.5.0-beta1
     sriovCni: ghcr.io/k8snetworkplumbingwg/sriov-cni:v2.7.0
     ibSriovCni:  ghcr.io/k8snetworkplumbingwg/ib-sriov-cni:v1.0.3
     sriovDevicePlugin: ghcr.io/k8snetworkplumbingwg/sriov-network-device-plugin:7e7f979087286ee950bd5ebc89d8bbb6723fc625
