--- a/deployment/network-operator/Chart.yaml
+++ b/deployment/network-operator/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: network-operator
-version: 1.5.0-beta4
+version: 2.5.6-beta.5
 kubeVersion: '>= 1.21.0'
-appVersion: v1.5.0-beta4
+appVersion: v2.5.6-beta.5
 description: Nvidia network operator
 type: application
 keywords:
